--- a/Medicontrol/Facturacion/Facturacion.Master
+++ b/Medicontrol/Facturacion/Facturacion.Master
@@ -167,6 +167,10 @@
                                                 <a href="ConsultarFacturas.aspx">
                                                     <asp:Literal ID="Literal5" runat="server" Text="Consultar Facturas" /></a>
                                             </li>
+                                            <li>
+                                                <a href="TarifasxProcedimientos.aspx">
+                                                    <asp:Literal ID="Literal35" runat="server" Text="Consultar Tarifas por Procedimiento" /></a>
+                                            </li>
                                              <li>
                                                 <a href="#">
                                                     <asp:Literal ID="Literal8" runat="server" Text="Facturas Capitadas" /><span class="fa arrow"></span></a>
@@ -189,6 +193,10 @@
                                                     </li>
                                                 </ul>
 
+                                            </li>
+                                            <li>
+                                                <a href="InconsistenciasBD.aspx">
+                                                    <asp:Literal ID="Literal34" runat="server" Text="Inconsistencia Base de Datos" /></a>
                                             </li>
                                             <li>
                                                 <a href="CuentaCobro.aspx">
