--- a/Medicontrol/Home.Master
+++ b/Medicontrol/Home.Master
@@ -169,6 +169,10 @@
                                                     <asp:Literal ID="Literal5" runat="server" Text="Consultar Facturas" /></a>
                                             </li>
                                             <li>
+                                                <a href="Facturacion/TarifasxProcedimientos.aspx">
+                                                    <asp:Literal ID="Literal35" runat="server" Text="Consultar Tarifas por Procedimiento" /></a>
+                                            </li>
+                                            <li>
                                                 <a href="#">
                                                     <asp:Literal ID="Literal8" runat="server" Text="Facturas Capitadas" /><span class="fa arrow"></span></a>
                                                 <ul class="nav nav-third-level">
@@ -190,6 +194,10 @@
                                                     </li>
                                                 </ul>
 
+                                            </li>
+                                            <li>
+                                                <a href="Facturacion/InconsistenciasBD.aspx">
+                                                    <asp:Literal ID="Literal34" runat="server" Text="Inconsistencia Base de Datos" /></a>
                                             </li>
                                              <li>
                                                 <a href="Facturacion/CuentaCobro.aspx">
